--- a/SureBetFinder.ipynb
+++ b/SureBetFinder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "71ace55a",
    "metadata": {},
    "outputs": [],
@@ -12,19 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "64b018c6",
    "metadata": {},
    "outputs": [],
    "source": [
     "REGION = 'us'\n",
-    "API_KEY = '9904d9c9a02fcb4dba3685607cda72a5'\n",
-    "ODDS_FORMAT = 'decimal'\n"
+    "ODDS_FORMAT = 'decimal'\n",
+    "\n",
+    "with open(\"api_key.txt\") as f:\n",
+    "    API_KEY = f.read().strip()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "47482c3f",
    "metadata": {},
    "outputs": [],
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "923e7b9e",
    "metadata": {},
    "outputs": [],
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "89322aac",
    "metadata": {},
    "outputs": [],
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "89fac396",
    "metadata": {},
    "outputs": [],
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "96837647",
    "metadata": {},
    "outputs": [],
@@ -124,27 +126,196 @@
     "    for bets in odds['bets']:\n",
     "        bet_percentage = round(1/bets['price'] * scaling_factor,3)\n",
     "        print(f\"{bets['bookmaker']}, {bets['outcome']}, Bet Percentage: {bet_percentage}, Payout: {bets['price']}x\\n\")\n",
-    "    print(f\"Sure Bet Return: {odds['return']/2}%\\n\\n\")"
+    "    print(f\"Arbitrage Return: {odds['return']/2}%\\n\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "d3e08b74",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m sports_odds \u001b[38;5;241m=\u001b[39m {sport:get_odds(sport) \u001b[38;5;28;01mfor\u001b[39;00m sport \u001b[38;5;129;01min\u001b[39;00m get_sports()}\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Processes event data into a list of dictionaries\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m all_events, event_ids \u001b[38;5;241m=\u001b[39m \u001b[43mprocess\u001b[49m\u001b[43m(\u001b[49m\u001b[43msports_odds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Finds and sorts the best odds for each event\u001b[39;00m\n\u001b[0;32m      8\u001b[0m best_odds \u001b[38;5;241m=\u001b[39m []\n",
-      "Cell \u001b[1;32mIn[5], line 9\u001b[0m, in \u001b[0;36mprocess\u001b[1;34m(sports)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sport \u001b[38;5;129;01min\u001b[39;00m sports:\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m event \u001b[38;5;129;01min\u001b[39;00m sports[sport]:\n\u001b[1;32m----> 9\u001b[0m         event_ids\u001b[38;5;241m.\u001b[39mappend(\u001b[43mevent\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mid\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m bookmaker \u001b[38;5;129;01min\u001b[39;00m event[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbookmakers\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[0;32m     11\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m market \u001b[38;5;129;01min\u001b[39;00m bookmaker[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmarkets\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sport: Primeira Liga - Portugal\n",
+      "\n",
+      "Outcomes: FC Porto, Draw, Braga, Date: 2025-11-02T20:31:00Z\n",
+      "\n",
+      "DraftKings, FC Porto, Bet Percentage: 0.528, Payout: 3.25x\n",
+      "\n",
+      "Bovada, Draw, Bet Percentage: 0.358, Payout: 4.8x\n",
+      "\n",
+      "Bovada, Braga, Bet Percentage: 0.114, Payout: 15.0x\n",
+      "\n",
+      "Arbitrage Return: 20.8655%\n",
+      "\n",
+      "\n",
+      "Sport: Brazil Série B\n",
+      "\n",
+      "Outcomes: Chapecoense, Draw, Remo, Date: 2025-11-02T21:31:00Z\n",
+      "\n",
+      "BetMGM, Chapecoense, Bet Percentage: 0.151, Payout: 8.75x\n",
+      "\n",
+      "BetMGM, Draw, Bet Percentage: 0.314, Payout: 4.2x\n",
+      "\n",
+      "FanDuel, Remo, Bet Percentage: 0.536, Payout: 2.46x\n",
+      "\n",
+      "Arbitrage Return: 12.0555%\n",
+      "\n",
+      "\n",
+      "Sport: Brazil Série A\n",
+      "\n",
+      "Outcomes: Draw, Atletico Mineiro, Internacional, Date: 2025-11-02T21:29:00Z\n",
+      "\n",
+      "DraftKings, Draw, Bet Percentage: 0.334, Payout: 3.45x\n",
+      "\n",
+      "DraftKings, Atletico Mineiro, Bet Percentage: 0.096, Payout: 12.0x\n",
+      "\n",
+      "Bovada, Internacional, Bet Percentage: 0.57, Payout: 2.02x\n",
+      "\n",
+      "Arbitrage Return: 6.588%\n",
+      "\n",
+      "\n",
+      "Sport: Brazil Série A\n",
+      "\n",
+      "Outcomes: Palmeiras, Draw, Juventude, Date: 2025-11-02T21:33:00Z\n",
+      "\n",
+      "Bovada, Palmeiras, Bet Percentage: 0.709, Payout: 1.6x\n",
+      "\n",
+      "BetMGM, Draw, Bet Percentage: 0.216, Payout: 5.25x\n",
+      "\n",
+      "DraftKings, Juventude, Bet Percentage: 0.076, Payout: 15.0x\n",
+      "\n",
+      "Arbitrage Return: 5.893%\n",
+      "\n",
+      "\n",
+      "Sport: NFL\n",
+      "\n",
+      "Outcomes: Buffalo Bills, Kansas City Chiefs, Date: 2025-11-02T21:25:35Z\n",
+      "\n",
+      "BetRivers, Buffalo Bills, Bet Percentage: 0.412, Payout: 2.5x\n",
+      "\n",
+      "MyBookie.ag, Kansas City Chiefs, Bet Percentage: 0.588, Payout: 1.75x\n",
+      "\n",
+      "Arbitrage Return: 1.4285%\n",
+      "\n",
+      "\n",
+      "Sport: Basketball Euroleague\n",
+      "\n",
+      "Outcomes: Maccabi Tel Aviv, AS Monaco, Date: 2025-11-06T20:00:00Z\n",
+      "\n",
+      "BetRivers, Maccabi Tel Aviv, Bet Percentage: 0.397, Payout: 2.55x\n",
+      "\n",
+      "DraftKings, AS Monaco, Bet Percentage: 0.603, Payout: 1.68x\n",
+      "\n",
+      "Arbitrage Return: 0.6305%\n",
+      "\n",
+      "\n",
+      "Sport: NCAAF\n",
+      "\n",
+      "Outcomes: Iowa Hawkeyes, Oregon Ducks, Date: 2025-11-08T20:30:00Z\n",
+      "\n",
+      "MyBookie.ag, Iowa Hawkeyes, Bet Percentage: 0.353, Payout: 2.86x\n",
+      "\n",
+      "DraftKings, Oregon Ducks, Bet Percentage: 0.647, Payout: 1.56x\n",
+      "\n",
+      "Arbitrage Return: 0.466%\n",
+      "\n",
+      "\n",
+      "Sport: NFL\n",
+      "\n",
+      "Outcomes: Jacksonville Jaguars, Las Vegas Raiders, Date: 2025-11-02T21:05:30Z\n",
+      "\n",
+      "Bovada, Jacksonville Jaguars, Bet Percentage: 0.551, Payout: 1.83x\n",
+      "\n",
+      "MyBookie.ag, Las Vegas Raiders, Bet Percentage: 0.449, Payout: 2.25x\n",
+      "\n",
+      "Arbitrage Return: 0.4555%\n",
+      "\n",
+      "\n",
+      "Sport: NCAAB\n",
+      "\n",
+      "Outcomes: Montana St Bobcats, Colorado Buffaloes, Date: 2025-11-04T02:00:00Z\n",
+      "\n",
+      "FanDuel, Montana St Bobcats, Bet Percentage: 0.123, Payout: 8.2x\n",
+      "\n",
+      "DraftKings, Colorado Buffaloes, Bet Percentage: 0.877, Payout: 1.15x\n",
+      "\n",
+      "Arbitrage Return: 0.424%\n",
+      "\n",
+      "\n",
+      "Sport: MMA\n",
+      "\n",
+      "Outcomes: Merab Dvalishvili, Petr Yan, Date: 2025-12-07T05:30:00Z\n",
+      "\n",
+      "DraftKings, Merab Dvalishvili, Bet Percentage: 0.788, Payout: 1.28x\n",
+      "\n",
+      "BetOnline.ag, Petr Yan, Bet Percentage: 0.212, Payout: 4.75x\n",
+      "\n",
+      "Arbitrage Return: 0.411%\n",
+      "\n",
+      "\n",
+      "Sport: NCAAF\n",
+      "\n",
+      "Outcomes: Miami (OH) RedHawks, Ohio Bobcats, Date: 2025-11-05T00:00:00Z\n",
+      "\n",
+      "MyBookie.ag, Miami (OH) RedHawks, Bet Percentage: 0.401, Payout: 2.51x\n",
+      "\n",
+      "DraftKings, Ohio Bobcats, Bet Percentage: 0.599, Payout: 1.68x\n",
+      "\n",
+      "Arbitrage Return: 0.318%\n",
+      "\n",
+      "\n",
+      "Sport: Boxing\n",
+      "\n",
+      "Outcomes: Willibaldo Garcia Perez, Kenshiro Teraji, Date: 2025-12-27T20:00:00Z\n",
+      "\n",
+      "FanDuel, Willibaldo Garcia Perez, Bet Percentage: 0.176, Payout: 5.7x\n",
+      "\n",
+      "BetUS, Kenshiro Teraji, Bet Percentage: 0.824, Payout: 1.22x\n",
+      "\n",
+      "Arbitrage Return: 0.2445%\n",
+      "\n",
+      "\n",
+      "Sport: NCAAF\n",
+      "\n",
+      "Outcomes: BYU Cougars, Texas Tech Red Raiders, Date: 2025-11-08T17:00:00Z\n",
+      "\n",
+      "MyBookie.ag, BYU Cougars, Bet Percentage: 0.234, Payout: 4.3x\n",
+      "\n",
+      "DraftKings, Texas Tech Red Raiders, Bet Percentage: 0.766, Payout: 1.31x\n",
+      "\n",
+      "Arbitrage Return: 0.204%\n",
+      "\n",
+      "\n",
+      "Sport: NFL\n",
+      "\n",
+      "Outcomes: New Orleans Saints, Los Angeles Rams, Date: 2025-11-02T21:05:18Z\n",
+      "\n",
+      "FanDuel, New Orleans Saints, Bet Percentage: 0.028, Payout: 36.0x\n",
+      "\n",
+      "Bovada, Los Angeles Rams, Bet Percentage: 0.972, Payout: 1.03x\n",
+      "\n",
+      "Arbitrage Return: 0.0675%\n",
+      "\n",
+      "\n",
+      "Sport: Championship\n",
+      "\n",
+      "Outcomes: Stoke City, Draw, Oxford United, Date: 2025-11-04T19:45:00Z\n",
+      "\n",
+      "BetRivers, Stoke City, Bet Percentage: 0.403, Payout: 2.48x\n",
+      "\n",
+      "FanDuel, Draw, Bet Percentage: 0.263, Payout: 3.8x\n",
+      "\n",
+      "DraftKings, Oxford United, Bet Percentage: 0.333, Payout: 3.0x\n",
+      "\n",
+      "Arbitrage Return: 0.014%\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -161,18 +332,19 @@
     "    best_odds_event = get_best_odds(event_id, all_events)\n",
     "    if best_odds_event is not None:\n",
     "        best_odds.append(best_odds_event) \n",
-    "all_odds.sort(key = lambda x:x['return'],reverse=True)\n",
+    "\n",
+    "best_odds.sort(key = lambda x:x['return'],reverse=True)\n",
     "\n",
     "# Displays events with sure bet opportunites\n",
-    "all_odds = list(filter(lambda odds: odds['return'] > 0, all_odds))\n",
-    "for odds in all_odds:\n",
+    "best_odds = list(filter(lambda odds: odds['return'] > 0, best_odds))\n",
+    "for odds in best_odds:\n",
     "    print_odds(odds)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "sleeper",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
